--- a/rewp1.html
+++ b/rewp1.html
@@ -23,12 +23,12 @@
                 </nav>
             </div>
             <div class="content"><h3>I'M A <span class="Multitext">STUDENT</span> </h3>
-            <p>Currently Pursuing 3rd Year Of B.tech Information Technology <br>at Panimalar Engineering College In Poonamalee</p></div>
+            <p>Currently Pursuing 3rd Year Of B.tech Information Technology <br>at Panimalar Engineering College In Poonamalee 2024-2025 </p></div>
             <div class="images">
                 <!-- <img class="shape"src="https://static.vecteezy.com/system/resources/previews/014/495/379/original/abstract-purple-spot-abstract-shape-of-purple-color-background-element-vector.jpg"> -->
                 <img class="girl"src="C:/SHABANA/rswp1.png">
             </div>
-            
+            ..
     </section>
    
 </body>
