made education section section -min-height:100vh,scroll

--- a/rewp1.html
+++ b/rewp1.html
@@ -22,13 +22,47 @@
                     </ul>
                 </nav>
             </div>
-            <div class="content"><h3>I'M A <span class="Multitext">STUDENT</span> </h3>
-            <p>Currently Pursuing 3rd Year Of B.tech Information Technology <br>at Panimalar Engineering College In Poonamalee 2024-2025 </p></div>
-            <div class="images">
+            <div class="about-content">
+                <h3 class="about-intro">I'M A <span class="Multitext">STUDENT</span></h3>
+            <p class="about-para">Currently Pursuing 3rd Year Of B.tech Information Technology <br>at Panimalar Engineering College In Poonamalee 2024-2025 </p></div>
+            <div class="about-images">
                 <!-- <img class="shape"src="https://static.vecteezy.com/system/resources/previews/014/495/379/original/abstract-purple-spot-abstract-shape-of-purple-color-background-element-vector.jpg"> -->
                 <img class="girl"src="C:/SHABANA/rswp1.png">
+            </div>        
+    </section>
+    <!-- page 2 -->
+    <section class="sdpage">
+        <h2 class="ed-heading">EDUCATION</h2>
+        <div class="ed-grid-container">
+        <div class="grid-box">
+            <div id="griditem1" class="date-left">May 2020</div>
+            <div id="griditem2" class="middle-clm">
+                <div class="point-left"></div>
             </div>
-            ..
+            <div id="griditem3" class="ed-cnt">
+                <h3 class="ed-subheading">Secondary</h3>
+                <p class="ed-subcnt">Completed Secondary Education in Eve Matriculation Higher Secondary School<br> with a percentage of 80.6%.</p>
+            </div>
+            <div id="griditem4"class="ed-cnt">
+                <h3 class="ed-subheading">Higher Secondary</h3>
+                <p  class="ed-subcnt">Completed Higher Secondary Education in Eve Matriculation Higher Secondary School<br> with a percentage of 91.5%.</p>
+            </div>
+            <div id="griditem5" class="middle-clm">
+                <div class="point-right"></div>
+            </div>
+            <div id="griditem6" class="date-right">
+                May 2022
+            </div>
+            <div id="griditem7" class="date-left">
+                July 2024
+            </div>
+            <div id="griditem8"class="middle-clm"><div class="point-left"></div></div>
+            <div id="griditem9"class="ed-cnt">
+                <h3 class="ed-subheading">College</h3>
+                <p  class="ed-subcnt">Currently pursuing 3rd year BTech Information Technology  in Panimalar Engineering College.</p>
+            </div>
+        </div>
+       </div>
     </section>
    
 </body>
