--- a/rewp1.html
+++ b/rewp1.html
@@ -11,7 +11,7 @@
     <section class="page1">
             <div class="heading">
                 <div class="logoname">
-                    <img src="C:/SHABANA/lg1.jpg" style="width:100px;height:100px;border-radius: 50%;"><p class="name">N.SHABANA BEGUM</p>
+                    <img src="C:/SHABANA/lg1.jpg" style="width:80px;height:80px;border-radius: 50%;"><p class="name">N.SHABANA BEGUM</p>
                 </div>
                 <nav class="navbar">
                     <ul class="navItems">
@@ -34,18 +34,18 @@
     <section class="sdpage">
         <h2 class="ed-heading">EDUCATION</h2>
         <div class="ed-grid-container">
-        <div class="grid-box">
+        <div class="ed-grid-box">
             <div id="griditem1" class="date-left">May 2020</div>
             <div id="griditem2" class="middle-clm">
                 <div class="point-left"></div>
             </div>
             <div id="griditem3" class="ed-cnt">
                 <h3 class="ed-subheading">Secondary</h3>
-                <p class="ed-subcnt">Completed Secondary Education in Eve Matriculation Higher Secondary School<br> with a percentage of 80.6%.</p>
+                <p class="ed-subcnt">Completed Secondary Education in Eve Matriculation Higher Secondary School with a percentage of 80.6%.</p>
             </div>
             <div id="griditem4"class="ed-cnt">
                 <h3 class="ed-subheading">Higher Secondary</h3>
-                <p  class="ed-subcnt">Completed Higher Secondary Education in Eve Matriculation Higher Secondary School<br> with a percentage of 91.5%.</p>
+                <p  class="ed-subcnt">Completed Higher Secondary Education in Eve Matriculation Higher Secondary School with a percentage of 91.5%.</p>
             </div>
             <div id="griditem5" class="middle-clm">
                 <div class="point-right"></div>
@@ -63,6 +63,45 @@
             </div>
         </div>
        </div>
+    </section>
+    <section class="cerfpage">
+        <h2 class="cer-heading">CERTIFICATIONS</h2></div>
+        <div class="cer-flex-box">
+            <div class="cer-grid-box">
+                    <div id="cer-flex1" class="fi">
+                        <h3 class="cer-subheading">NASSCOM</h3>
+                        <div class="cer-cntnt">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        </div>
+                    </div>
+                    <div id="cer-flex2"class="fi">
+                        <h3 class="cer-subheading">GUVI</h3>
+                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        </div>
+                    </div>
+                    <div id="cer-flex3"class="fi">
+                        <h3 class="cer-subheading">HACKER RANK</h3>
+                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.  Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        </div>
+                    </div>
+                    <div id="cer-flex4"class="fi">
+                        <h3 class="cer-subheading">HARVARD UNIVERSITY</h3>
+                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        </div>
+                    </div>
+                    <div id="cer-flex5" class="fi">
+                        <h3 class="cer-subheading">GREAT LEARNING</h3>
+                            <div class="cer-cntnt">
+                            Lorem, ipsum dolor sit amet consectetur adipisicing elit.  Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                            </div>
+                    </div>
+                    <div id="cer-flex6"class="fi">
+                        <h3 class="cer-subheading">ACMEGRADE</h3>
+                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        </div>
+                    </div>
+            </div>
+        </div>  
     </section>
    
 </body>
