added skills section using grid animation,target,keyframe

--- a/rewp1.html
+++ b/rewp1.html
@@ -8,16 +8,17 @@
     <link rel="stylesheet" href="rswpsty.css">
 </head>
 <body>
-    <section class="page1">
+    <section class="page1" id="page1">
             <div class="heading">
                 <div class="logoname">
                     <img src="C:/SHABANA/lg1.jpg" style="width:80px;height:80px;border-radius: 50%;"><p class="name">N.SHABANA BEGUM</p>
                 </div>
                 <nav class="navbar">
                     <ul class="navItems">
-                        <li><a href="rewp1.html">ABOUT</a></li>
-                        <li><a href="timeline.html">EDUCATION</a></li>
-                        <li><a href="day3.html">CERTIFICATIONS</a></li>
+                        <li><a href="#page1">ABOUT</a></li>
+                        <li><a href="#sdpage">EDUCATION</a></li>
+                        <li><a href="#cerfpage">CERTIFICATIONS</a></li>
+                        <li><a href="#skillspage">SKILLS</a></li>
                         <li><a href="#">CONTACT</a></li>
                     </ul>
                 </nav>
@@ -31,7 +32,7 @@
             </div>        
     </section>
     <!-- page 2 -->
-    <section class="sdpage">
+    <section class="sdpage" id="sdpage">
         <h2 class="ed-heading">EDUCATION</h2>
         <div class="ed-grid-container">
         <div class="ed-grid-box">
@@ -64,7 +65,7 @@
         </div>
        </div>
     </section>
-    <section class="cerfpage">
+    <section class="cerfpage" id="cerfpage">
         <h2 class="cer-heading">CERTIFICATIONS</h2></div>
         <div class="cer-flex-box">
             <div class="cer-grid-box">
@@ -103,6 +104,61 @@
             </div>
         </div>  
     </section>
+    <section class="skillspage" id="skillspage">
+        <h3 class="skill-heading">SKILLS</h3>
+        <div class="s-grid-container">
+                <div class="skills-grid-box">
+                    <div class="skills-griditem1">
+                            <div class="skill">
+                                <h3 class="s-txt">HTML</h3>
+                                <h3 class="s-prcntg">80%</h3>
+                            </div>
+                            <div class="s-bar">
+                                <div class="html-bar"></div>
+                            </div>
+
+                        <div class="skill">
+                            <h3 class="s-txt">CSS</h3>
+                            <h3 class="s-prcntg">70%</h3>
+                        </div>
+                        <div class="s-bar">
+                            <div class="css-bar"></div>
+                        </div>
+                        <div class="skill">
+                            <h3 class="s-txt">JS</h3>
+                            <h3 class="s-prcntg">0%</h3>
+                        </div>
+                        <div class="s-bar">
+                        <div class="js-bar"></div>
+                        </div>
+                    </div>
+                    <div class="skills-griditem2">
+                        <div class="skill">
+                            <h3 class="s-txt">PYTHON</h3>
+                            <h3 class="s-prcntg">40%</h3>
+                        </div>
+                        <div class="s-bar">
+                        <div class="python-bar"></div>
+                        </div>
+                        <div class="skill">
+                            <h3 class="s-txt">JAVA</h3>
+                            <h3 class="s-prcntg">40%</h3>
+                        </div>
+                        <div class="s-bar">
+                                <div class="java-bar"></div>
+                        </div>
+                        <div class="skill">
+                            <h3 class="s-txt">SQL</h3>
+                            <h3 class="s-prcntg">70%</h3>
+                        </div>
+                        <div class="s-bar">
+                                <div class="sql-bar"></div>
+                        </div>
+                    </div>
+                </div>
+        </div>
+    </section>
+
    
 </body>
 </html>
