Save work before pulling remote changes

--- a/rewp1.html
+++ b/rewp1.html
@@ -11,21 +11,22 @@
     <section class="page1" id="page1">
             <div class="heading">
                 <div class="logoname">
-                    <img src="C:/SHABANA/lg1.jpg" style="width:80px;height:80px;border-radius: 50%;"><p class="name">N.SHABANA BEGUM</p>
+                    <p class="name">Shabana Begum.N</p>
                 </div>
                 <nav class="navbar">
                     <ul class="navItems">
-                        <li><a href="#page1">ABOUT</a></li>
-                        <li><a href="#sdpage">EDUCATION</a></li>
-                        <li><a href="#cerfpage">CERTIFICATIONS</a></li>
-                        <li><a href="#skillspage">SKILLS</a></li>
-                        <li><a href="#">CONTACT</a></li>
+                        <li><a href="#page1">About</a></li>
+                        <li><a href="#sdpage">Education</a></li>
+                        <li><a href="#cerfpage">Certifications</a></li>
+                        <li><a href="#skillspage">Skills</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </nav>
             </div>
             <div class="about-content">
-                <h3 class="about-intro">I'M A <span class="Multitext">STUDENT</span></h3>
-            <p class="about-para">Currently Pursuing 3rd Year Of B.tech Information Technology <br>at Panimalar Engineering College In Poonamalee 2024-2025 </p></div>
+                <h3 class="about-intro">I'm a <span class="Multitext">STUDENT</span></h3>
+            <p class="about-para">Currently Pursuing 3rd Year Of B.tech In Information Technology At Panimalar Engineering College In Poonamalee 2024-2025 </p>
+            </div>
             <div class="about-images">
                 <!-- <img class="shape"src="https://static.vecteezy.com/system/resources/previews/014/495/379/original/abstract-purple-spot-abstract-shape-of-purple-color-background-element-vector.jpg"> -->
                 <img class="girl"src="C:/SHABANA/rswp1.png">
@@ -66,39 +67,39 @@
        </div>
     </section>
     <section class="cerfpage" id="cerfpage">
-        <h2 class="cer-heading">CERTIFICATIONS</h2></div>
+        <h2 class="cer-heading">Certifications</h2></div>
         <div class="cer-flex-box">
             <div class="cer-grid-box">
                     <div id="cer-flex1" class="fi">
-                        <h3 class="cer-subheading">NASSCOM</h3>
+                        <h3 class="cer-subheading">Nasscom</h3>
                         <div class="cer-cntnt">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                            Certified by NASSCOM, demonstrating expertise in data science concepts and applications.
                         </div>
                     </div>
                     <div id="cer-flex2"class="fi">
-                        <h3 class="cer-subheading">GUVI</h3>
-                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        <h3 class="cer-subheading">Guvi</h3>
+                        <div class="cer-cntnt"> Earned from GUVI, showcasing proficiency in Python programming.
                         </div>
                     </div>
                     <div id="cer-flex3"class="fi">
-                        <h3 class="cer-subheading">HACKER RANK</h3>
-                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit.  Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        <h3 class="cer-subheading">Cybertronium </h3>
+                        <div class="cer-cntnt">Certified by Cybertronium, Malaysia, validating skills in penetration testing and cybersecurity.
                         </div>
                     </div>
                     <div id="cer-flex4"class="fi">
-                        <h3 class="cer-subheading">HARVARD UNIVERSITY</h3>
-                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        <h3 class="cer-subheading">Cisco </h3>
+                        <div class="cer-cntnt">Certified by Cisco Networking Academy, covering fundamental cybersecurity concepts and practices.
                         </div>
                     </div>
                     <div id="cer-flex5" class="fi">
-                        <h3 class="cer-subheading">GREAT LEARNING</h3>
+                        <h3 class="cer-subheading">Coursera</h3>
                             <div class="cer-cntnt">
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit.  Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
                             </div>
                     </div>
                     <div id="cer-flex6"class="fi">
-                        <h3 class="cer-subheading">ACMEGRADE</h3>
-                        <div class="cer-cntnt">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nisi rem dicta fugiat obcaecati aliquid possimus nihil minima quam officiis!
+                        <h3 class="cer-subheading">Acmegrade</h3>
+                        <div class="cer-cntnt">Certified by Acmegrade, covering key concepts in data science, machine learning, and data analytics.
                         </div>
                     </div>
             </div>
